--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     }
     .linkedin-image {
       width: 30px;
-    
+      height: 30px;
     }
     .language-class img {
-      width: 50px;
-      margin: 5px;
+      width: 30px;
     }
     .language-class {
       display: flex;
       align-items: center;
+      font-size: 25px;
+      font-weight: bold;
     }
     .languages {
       font-family: arial;
@@ -59,7 +60,7 @@
     <div class="languages">
       <h1>Most Used Languages:</h1>
       <p>HTML 40.85%</p>
-      <p>CSS 5.8%</p>
+      <p>CSS 15.8%</p>
       <p>python 20%</p>
       <p>javascript 20%</p>
     </div>
